sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven11/errors.jtrrouter
Error: Attribute 'maxspeed' is missing in definition of lane '1_0'.
Quitting (on error).
